@@ -1,0 +1,7 @@
+include ChangeLog AUTHORS COPYING NEWS README
+include MANIFEST.in
+include gobject/pygobject.h gobject/pygobject-private.h
+include pygtk.py pygobject-2.0.pc.in
+include dsextras.py
+recursive-include examples *.py
+global-exclude */CVS/* .cvsignore
